# idp-rust

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  example.env
client_app/: Cargo.toml
client_app/src/: handlers.rs  main.rs  models.rs
client_app/static/: index.html  main.js  style.css
crypto/: Cargo.toml
crypto/src/: lib.rs
db_client/: Cargo.toml
db_client/src/: lib.rs  models.rs
db_client/tests/: test.rs
jwt_core/: Cargo.toml
jwt_core/src/: lib.rs
jwt_core/tests/: test.rs
migrations/: 20260412122008_create_users_table.sql  20260418043723_create_refresh_tokens.sql  20260419055546_create_oauth_clients_table.sql  20260420022442_create_user_consents_table.sql
oauth_flow/: Cargo.toml
oauth_flow/src/: lib.rs
oauth_flow/tests/: test.rs
server/: Cargo.toml
server/src/: handlers.rs  main.rs  middleware.rs  models.rs
server/templates/: consent.html  login.html
