[package]
name = "db_client"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-rustls", "macros", "chrono"] }
tokio = { version = "1.51.1", features = ["full"] }

[dev-dependencies]
uuid = { version = "1.23.0", features = ["v4"] }
